MyDemoOrg/force-app/main/default/objects/signature__FieldLabels__c/signature__FieldLabels__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Field Label Translations</description>
    <label>ß Field Labels</label>
</CustomObject>