MyDemoOrg/force-app/main/default/objects/signature__FieldLabels__c/fields/signature__APIName__c.field-meta.xml
<CustomField>
    <fullName>signature__APIName__c</fullName>
    <label>APIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>