MyDemoOrg/force-app/main/default/objects/signature__FieldLabels__c/fields/signature__Label__c.field-meta.xml
<CustomField>
    <fullName>signature__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>