MyDemoOrg/force-app/main/default/objects/signature__FieldLabels__c/fields/signature__LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>signature__LanguageCode__c</fullName>
    <description>Usually a 2-letter country code</description>
    <inlineHelpText>Usually a 2-letter country code</inlineHelpText>
    <label>Language Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>