MyDemoOrg/force-app/main/default/objects/signature__FieldLabels__c/listViews/signature__All.listView-meta.xml
<ListView>
    <fullName>signature__All</fullName>
    <columns>NAME</columns>
    <columns>signature__APIName__c</columns>
    <columns>signature__LanguageCode__c</columns>
    <columns>signature__Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>